--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>IochtiCom</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
